<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="viewModel"
            type="nejati.me.omdbapi.viewModels.detail.DetailViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            app:blurelImage='@{viewModel.detailMovieResponse.poster ?? ""}'
            android:contentDescription="@string/movie_poster" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/detail_activity_background" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:fitsSystemWindows="true"
            tools:context=".CardDemoActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_400dp"
                android:fitsSystemWindows="true"
                app:elevation="0dp"
                android:background="@android:color/transparent">


                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true">

                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true" />

                        <ImageView
                            android:layout_width="@dimen/_250dp"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:scaleType="fitXY"
                            app:moviesImage='@{viewModel.detailMovieResponse.poster ?? ""}'
                            android:contentDescription="@string/movie_poster" />
                    </RelativeLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin" />
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="@dimen/_10dp"
                            android:baselineAligned="false">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_weight="100"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/TopDetailValueMovieTextViewStyle"
                                    android:text="@{viewModel.detailMovieResponse.runtime}" />

                                <TextView
                                    style="@style/TopDetailValueMovieTextViewStyle"
                                    android:text="@string/duration" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_weight="100"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/TopDetailValueMovieTextViewStyle"
                                    android:text="@{viewModel.detailMovieResponse.released}" />

                                <TextView
                                    style="@style/TopDetailValueMovieTextViewStyle"
                                    android:text="@string/released" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_weight="100"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    style="@style/TopDetailValueMovieTextViewStyle"
                                    android:text="@{viewModel.detailMovieResponse.type}" />

                                <TextView
                                    android:text="@string/type"
                                    style="@style/TopDetailValueMovieTextViewStyle" />
                            </LinearLayout>
                        </LinearLayout>

                        <include
                            layout="@layout/movie_details_layout"
                            bind:viewModel="@{((nejati.me.omdbapi.viewModels.detail.DetailViewModel) viewModel)}" />
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

            </FrameLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <include
            android:id="@+id/llLoading"
            layout="@layout/loading"
            android:visibility="@{viewModel.showProgressLayout ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>

</layout>